--- a/loginscreen.html
+++ b/loginscreen.html
@@ -124,6 +124,11 @@
   cursor: pointer;
 }
 
+.submit-btn-login{
+
+  background-color: #000;
+  color: #fff;
+}
 .login-button-container button[type="submit"] {
   background-color: #000;
   color: #fff;
@@ -158,8 +163,8 @@
 </head>
 <body>
 
-<!-- 로그인 화면 -->
-    <div id="loginScreen" class="screen hidden">
+  <!-- 로그인 화면 -->
+  <div id="loginScreen" class="screen hidden">
     <div class="login-form-container">
       <h2>로그인</h2>
       <p>서비스 이용을 위해 로그인 해 주세요 :)</p>
@@ -174,14 +179,21 @@
             <input type="password" id="password" placeholder="비밀번호를 입력하세요.">
           </div>
         </div>
+  
         <div class="login-button-container">
-          <button type="button" class="submit-btn-login">로그인</button>
+          <a href="signin.html">
+            <button type="button" id="signupBtn">회원가입</button>
+          </a>
+
+          <a href="main.html">
+            <button type="button" class="submit-btn-login">로그인</button>
+          </a>
         </div>
       </form>
     </div>
   </div>
-  
+
+
   <script src="app.js"></script>
-  
 </body>
 </html>
