--- a/loginscreen.html
+++ b/loginscreen.html
@@ -124,11 +124,6 @@
   cursor: pointer;
 }
 
-.submit-btn-login{
-
-  background-color: #000;
-  color: #fff;
-}
 .login-button-container button[type="submit"] {
   background-color: #000;
   color: #fff;
@@ -184,16 +179,18 @@
           <a href="signin.html">
             <button type="button" id="signupBtn">회원가입</button>
           </a>
-
           <a href="main.html">
-            <button type="button" class="submit-btn-login">로그인</button>
+            <button type="submit" class="submit-btn-login">로그인</button>
+
           </a>
+
         </div>
       </form>
     </div>
   </div>
 
 
-  <script src="app.js"></script>
+<script src="app.js"></script>
+ 
 </body>
 </html>
