--- a/loginscreen.html
+++ b/loginscreen.html
@@ -159,19 +159,20 @@
 <body>
 
   <!-- 로그인 화면 -->
-  <div id="loginScreen" class="screen hidden">
+  <div id="loginScreen" class="screen">
     <div class="login-form-container">
       <h2>로그인</h2>
       <p>서비스 이용을 위해 로그인 해 주세요 :)</p>
+
       <form>
         <div class="input-container">
           <div class="form-group">
             <label for="name">이름</label>
-            <input type="text" id="name" placeholder="이름을 입력하세요.">
+            <input type="text" id="name" name="username" placeholder="이름을 입력하세요." requried>
           </div>
           <div class="form-group">
             <label for="password">비밀번호</label>
-            <input type="password" id="password" placeholder="비밀번호를 입력하세요.">
+            <input type="password" id="password" name="password" placeholder="비밀번호를 입력하세요." required>
           </div>
         </div>
   
@@ -181,16 +182,102 @@
           </a>
           <a href="main.html">
             <button type="submit" class="submit-btn-login">로그인</button>
-
           </a>
-
         </div>
       </form>
     </div>
   </div>
 
 
-<script src="app.js"></script>
+  <script>
+    
+//로그인 함수
+async function login(username, password) {
+  try {
+    console.log('로그인 함수 호출');
+
+    // 로그인 요청
+    const response = await fetch('http://127.0.0.1:8000/login/', {
+      method: 'POST',
+      headers: {
+          'Content-Type': 'application/json'
+      },
+      body: JSON.stringify({ username: username, password: password }),
+    });
+
+    if (response.ok) {
+        const data = await response.json();
+        console.log('로그인 성공:', data);
+
+        const accessToken = data.access;  // 'access' 필드로 응답받았다고 가정
+        const refreshToken = data.refresh;  // 'refresh' 필드로 응답받았다고 가정
+        console.log(localStorage.getItem('accessToken'));  // accessToken이 잘 저장되었는지 확인
+        console.log(localStorage.getItem('refreshToken'));  // refreshToken이 잘 저장되었는지 확인
+
+        // 로컬 스토리지에 저장
+        localStorage.setItem('accessToken', accessToken);
+        localStorage.setItem('refreshToken', refreshToken);
+
+        alert('로그인에 성공했습니다!');
+        window.location.href = 'main.html';  // 로그인 성공 후 main.html로 리디렉션
+    } else {
+        const errorData = await response.json();
+        console.log('로그인 실패:', errorData);
+        alert('로그인에 실패했습니다. 아이디와 비밀번호를 다시 확인해주세요.');
+    }
+  } catch (error) {
+    console.error('로그인 중 에러 발생:', error);
+    alert('로그인 중 오류가 발생했습니다.');
+  }
+}
+
+
+// 로그인 버튼 클릭 이벤트 처리
+document.querySelector('.submit-btn-login').addEventListener('click', function(event) {
+  event.preventDefault();  // 폼 기본 제출 방지
+
+  const username = document.getElementById('name').value;
+  const password = document.getElementById('password').value;
+
+  // 클릭되었다는 로그 출력
+  console.log("로그인 완료 버튼이 클릭되었습니다!");
+
+  // 값 확인용 로그
+  console.log('아이디:', username);
+  console.log('비밀번호:', password);
+
+  // 로그인 함수 호출
+  login(username, password);
+});
+
+
+
+async function refreshAccessToken() {
+  const refreshToken = localStorage.getItem('refreshToken');
+
+  const response = await fetch('http://127.0.0.1:8000/refresh-token/', {
+    method: 'POST',
+    headers: {
+      'Content-Type': 'application/json'
+    },
+    body: JSON.stringify({ refresh: refreshToken })
+  });
+
+  if (response.ok) {
+    const data = await response.json();
+    const newAccessToken = data.access;
+    localStorage.setItem('accessToken', newAccessToken);
+    return newAccessToken;
+  } else {
+    console.log('토큰 갱신 실패');
+    alert('로그인 세션이 만료되었습니다. 다시 로그인 해주세요.');
+  }
+};
+
+
+
+
+  </script>
  
 </body>
 </html>
