--- a/detail.html
+++ b/detail.html
@@ -155,7 +155,7 @@ body {
                 </a>
             </li>
             <li>
-                <a href = "index.html#mainScreen">
+                <a href = "main.html">
                     <img src="assets/home-icon-white.png" alt="Home">
                 </a>
             </li>
