--- a/nonameboardwrite.html
+++ b/nonameboardwrite.html
@@ -150,7 +150,7 @@
                 </a>
             </li>
             <li>
-                <a href = "index.html#mainScreen">
+                <a href = "main.html">
                     <img src="assets/home-icon-white.png" alt="Home">
                 </a>
             </li>
