--- a/positionboard.html
+++ b/positionboard.html
@@ -33,7 +33,7 @@
                 </a>
             </li>
             <li>
-                <a href = "index.html#mainScreen">
+                <a href = "main.html">
                     <img src="assets/home-icon-white.png" alt="Home">
                 </a>
             </li>
