--- a/profile.html
+++ b/profile.html
@@ -116,33 +116,33 @@
         <h1>프로필을 설정해주세요.</h1>
         <img src="assets/프로필투명아이콘.png" alt="Profile">
 
-        <form>
+        <form id="profile-form">
             <label for="profile-name">닉네임</label>
-            <input type="profile-text" id="name" placeholder="닉네임을 입력해주세요.">
+            <input type="profile-text" id="name" placeholder="닉네임을 입력해주세요." required>
 
             <label for="gender">성별</label>
             <select id="gender">
                 <option value="" disabled selected>성별을 선택해주세요.</option>
-                <option value="male">남성</option>
-                <option value="female">여성</option>
+                <option value="M">남성</option>
+                <option value="F">여성</option>
             </select>
 
             <label for="profile-age">나이</label>
-            <input type="number" id="age" placeholder="나이를 입력해주세요.">
+            <input type="number" id="age" placeholder="나이를 입력해주세요." required>
 
             <label for="profile-occupation">관심사 (직군)</label>
             <select id="occupation">
                 <option value="" disabled selected>성별을 선택해주세요.</option>
-                <option value="frontend">프론트엔드</option>
-                <option value="backend">백엔드</option>
-                <option value="marketer">마케터</option>
-                <option value="creator">크리에이터</option>
-                <option value="changup">창업자</option>
+                <option value="FE">프론트엔드</option>
+                <option value="BE">백엔드</option>
+                <option value="ST">창업자</option>
+                <option value="CT">크리에이터</option>
+                <option value="MK">마케터</option>
             </select>
 
 
             <label for="profile-activity">활동 반경</label>
-            <input type="text" id="activity" placeholder="활동 반경을 입력해주세요.">
+            <input type="text" id="activity" placeholder="활동 반경을 입력해주세요." required>
             <a href="loginscreen.html">
                 <button type="button" class="submit-btn">완료</button>
             </a>
@@ -150,6 +150,69 @@
               
         </form>
     </div>
-  <script src="app.js"></script>
+  <script>
+
+    // 프로필 저장 함수
+async function saveProfile(firstName, age, gender, occupation, activity) {
+    console.log('프로필 작성 함수 호출');
+
+    // 프로필 저장 요청
+    const response = await fetch('http://127.0.0.1:8000/profile/create/', {
+        method: 'POST',
+        headers: {
+            'Content-Type': 'application/json',
+            'Authorization': `Bearer ${localStorage.getItem('accessToken')}`, // JWT 토큰을 Authorization 헤더에 포함
+        },
+        body: JSON.stringify({
+            nickname: firstName,
+            age: age,
+            gender: gender,
+            job: occupation,
+            area: activity,
+        }),
+    });
+
+    if (response.ok) {
+        const data = await response.json();
+        console.log('프로필 저장 성공:', data);
+        alert('프로필이 성공적으로 저장되었습니다!');
+        window.location.href = 'main.html';  // 프로필 저장 후 main 페이지로 리디렉션
+    } else {
+        const errorData = await response.json();
+        console.log('프로필 저장 실패:', errorData);
+        alert('프로필 저장에 실패했습니다. 다시 시도해주세요.');
+    }
+}
+
+// 완료 버튼 클릭 이벤트 처리
+document.querySelector('.submit-btn').addEventListener('click', function(event) {
+    event.preventDefault();  // 폼 기본 제출 방지
+
+    // 입력된 값 가져오기
+    const firstName = document.getElementById('name').value;
+    const age = document.getElementById('age').value;
+
+    const gender = document.getElementById('gender').value;
+    const occupation = document.getElementById('occupation').value;
+    const activity = document.getElementById('activity').value;
+
+    // 클릭된 로그 출력
+    console.log("완료 버튼이 클릭되었습니다!");
+
+    // 값 확인용 로그
+    console.log('닉네임:', firstName);
+    console.log('성별:', gender);
+    console.log('나이:', age);
+    console.log('직군:', occupation);
+    console.log('활동 반경:', activity);
+
+    // 프로필 저장 함수 호출
+    saveProfile(firstName, age, gender, occupation, activity);
+});
+
+
+
+</script>
+ 
 </body>
 </html>
