--- a/positionboard.html
+++ b/positionboard.html
@@ -21,6 +21,64 @@
       }
 
 
+      /* 포지션보드 관련 -----------------------------------------------------------*/
+
+
+.positionboardScreen {
+  position:absolute;
+  padding: 3rem 2rem;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: flex-start;
+  background: url('assets/background2.png') no-repeat center center/cover;
+  position: relative;
+  width: 100%; /* 화면 전체 너비 */
+  min-height: 100vh; /* 화면 최소 높이 */
+  display: flex;
+  flex-direction: column; /* 사이드바와 콘텐츠를 가로로 배치 */
+  align-items: flex-start; /* 상단 정렬 */
+  overflow-x:hidden;
+  overflow-y:hidden;
+}
+
+.positionboardScreen h1 {
+  position: absolute;
+  width: 214px;
+  height: 70px;
+  left: 240px;
+  top: 38px;
+  
+  font-family: 'Gowun Dodum';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 48px;
+  line-height: 70px;
+  /* identical to box height */
+  
+  color: #D3D5DF;
+}
+
+
+
+
+.imoji {
+  position:absolute;
+  height: 105px;
+  width:105px;
+  top :20px;
+  left:120px;
+}
+
+.positionboardBackground {
+  position:absolute;
+  height: 800px;
+  width:1700px;
+  top :145px;
+  left:100px;
+  z-index:3;
+}
+
   </style>
 </head>
 <body>
